syntax = "proto3";

package app;

// Declare a service for each controller you have
service AppController {
  // Declare an rpc for each method that is called via gRPC
  rpc Accumulate (NumberArray) returns (SumOfNumberArray);

  rpc GetInfoById (StringId) returns (PersonId);

  rpc GetHealth (NoArgs) returns (Health);
}

// Declare the types used above
message NumberArray {
  repeated double data = 1;
}
message SumOfNumberArray {
  double sum = 1;
}

message StringId{
  string data=1;
}

message PersonId{
  string id=1;
  string name = 2;
  double mis=3;
}

message Health{
  string status =1;
}

message NoArgs{}